tests/snapshots/wizard/wizard_api_key_80x24.snap
---
source: src/tui/wizard/view.rs
---
" ⠿ overbrainer   new project                                        step 3 of 7 "
"  ╭ API key ─────────────────────────────────────────────────────────────────╮  "
"  │                                                                          │  "
"  │  The provider's key goes to .env (mode 600) and is never shown again.    │  "
"  │                                                                          │  "
"  │  API key     •••••••••••••••••••••                                       │  "
"  │              a key, vault:<mount>/<path>#<field>, or empty for later     │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  ╰──────────────────────────────────────────────────────────────────────────╯  "
" Enter next · Esc back · ↑↓ field · ←→ choose · Ctrl-C quit                     "
