tests/snapshots/wizard/wizard_model_80x24.snap
---
source: src/tui/wizard/view.rs
---
" ⠿ overbrainer   new project                                        step 6 of 7 "
"  ╭ Child model ─────────────────────────────────────────────────────────────╮  "
"  │                                                                          │  "
"  │  base model  Qwen/Qwen3-4B                                               │  "
"  │              a Hugging Face repo ID or a path on the target              │  "
"  │                                                                          │  "
"  │  adapter     ‹ qlora ›                                                   │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  ╰──────────────────────────────────────────────────────────────────────────╯  "
" Enter next · Esc back · ↑↓ field · ←→ choose · Ctrl-C quit                     "
