tests/snapshots/wizard/wizard_name_120x40.snap
---
source: src/tui/wizard/view.rs
---
" ⠿ overbrainer   new project                                                                                step 1 of 7 "
"                  ╭ Project ─────────────────────────────────────────────────────────────────────────╮                  "
"                  │                                                                                  │                  "
"                  │  name        rust_expert                                                         │                  "
"                  │              the name of the project                                             │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  ╰──────────────────────────────────────────────────────────────────────────────────╯                  "
" Enter next · Esc back · ↑↓ field · ←→ choose · Ctrl-C quit                                                             "
