tests/snapshots/wizard/wizard_provider_80x24.snap
---
source: src/tui/wizard/view.rs
---
" ⠿ overbrainer   new project                                        step 2 of 7 "
"  ╭ Provider ────────────────────────────────────────────────────────────────╮  "
"  │                                                                          │  "
"  │  provider    ‹ NanoGPT ›                                                 │  "
"  │              ← → choose; a preset fills protocol and base URL            │  "
"  │              openai, https://nano-gpt.com/api/v1                         │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  ╰──────────────────────────────────────────────────────────────────────────╯  "
" Enter next · Esc back · ↑↓ field · ←→ choose · Ctrl-C quit                     "
