tests/snapshots/wizard/wizard_provider_custom_refused_120x40.snap
---
source: src/tui/wizard/view.rs
---
" ⠿ overbrainer   new project                                                                                step 2 of 7 "
"                  ╭ Provider ────────────────────────────────────────────────────────────────────────╮                  "
"                  │                                                                                  │                  "
"                  │  provider    ‹ custom ›                                                          │                  "
"                  │                                                                                  │                  "
"                  │  name                                                                            │                  "
"                  │              the name must match ^[a-z0-9_]+$                                    │                  "
"                  │                                                                                  │                  "
"                  │  protocol    ‹ openai ›                                                          │                  "
"                  │                                                                                  │                  "
"                  │  base URL                                                                        │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  │                                                                                  │                  "
"                  ╰──────────────────────────────────────────────────────────────────────────────────╯                  "
" Enter next · Esc back · ↑↓ field · ←→ choose · Ctrl-C quit                                                             "
